// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PublicationsSelect > renders checked when selected 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-var-root ant-checkbox-css-var css-dev-only-do-not-override-oc1rc0"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-oc1rc0 ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`PublicationsSelect > renders unchecked when not selected 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var css-dev-only-do-not-override-oc1rc0"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-oc1rc0"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`PublicationsSelect > sets publication selection on checkbox change 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper css-var-root ant-checkbox-css-var css-dev-only-do-not-override-oc1rc0"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-oc1rc0"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
    </span>
  </label>
</DocumentFragment>
`;
